--- a/paper/abstract-en/extended-abstract.tex
+++ b/paper/abstract-en/extended-abstract.tex
@@ -2,6 +2,8 @@
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
 \usepackage{times}
+\usepackage{enumitem}
+\usepackage[hang,flushmargin]{footmisc} 
 \usepackage{microtype}
 \usepackage[dvipsnames]{xcolor}
 \usepackage{amsmath}
