--- a/paper/abstract-nl/conclusion.tex
+++ b/paper/abstract-nl/conclusion.tex
@@ -4,7 +4,7 @@
 \noindent \textbf{Agent.}
 Voor de implementatie van de agent in deze masterproef werd gekozen voor Java, meer specifiek het JUnit testframework. Dit heeft als nadeel dat tests niet parallel kunnen worden uitgevoerd. Om dit mogelijk te maken is er, naast de technische moeilijkheden, nood aan een co\"ordinatiemechanisme om tests over meerdere processorthreads te plannen.\\
 
-\noindent \textbf{Voorspeller.}
+\noindent \textbf{Predictor.}
 Momenteel werken alle voorspellingsalgoritmes los van elkaar. Mogelijks kan er verborgen potentieel schuilen in het combineren van verschillende algoritmen, bijvoorbeeld door gewichten toe te kennen aan elk algoritme en op basis daarvan de voorspellingen samen te voegen.\\
 
 \noindent \textbf{Meta predictor.}
