--- a/paper/abstract-nl/extended-abstract.tex
+++ b/paper/abstract-nl/extended-abstract.tex
@@ -2,6 +2,8 @@
 \usepackage[utf8]{inputenc}
 \usepackage[dutch]{babel}
 \usepackage{times}
+\usepackage{enumitem}
+\usepackage[hang,flushmargin]{footmisc}
 \usepackage{microtype}
 \usepackage[dvipsnames]{xcolor}
 \usepackage{amsmath}
@@ -74,7 +76,6 @@
 	\input{techniques.tex}
 	\input{algorithms.tex}
 	\input{framework.tex}
-	\clearpage
 	\input{results.tex}
 	\input{conclusion.tex}
 	
