--- a/paper/abstract-nl/introduction.tex
+++ b/paper/abstract-nl/introduction.tex
@@ -3,20 +3,9 @@
 \section{Introductie}
 \noindent Kenmerkend aan de hedendaagse wereld is de verbazingwekkende snelheid waarmee alles in deze wereld verandert. Dit geldt in het bijzonder voor de informaticasector, waarin elke dag nieuwe ontwikkelingen plaatsvinden. Hoewel deze ontwikkelingen vooral hardware gerelateerd ogen, denk maar aan smartwatches, zelfrijdende auto's en biologische technologie, kunnen ze niet functioneren zonder een nog meer geavanceerde softwarecomponent. Bijgevolg is zowel de omvang als de complexiteit van software de laatste decennia exponentieel toegenomen.\\
 
-\noindent Softwareontwikkelaars hebben ondervonden dat de traditionele ontwikkelingsmethoden deze evolutie niet kunnen bijbenen en hebben hun focus verlegd naar andere strategie\"en. In plaats van de volledige applicatie in één keer te implementeren, verkiezen ontwikkelaars vandaag de dag de Agile methoden \cite{beck2001agile}. 
-% herschrijf heel deze zin-> Het primaire doel is zo snel mogelijk op de markt brengen, om zo de financiele riscio's te verkleinen: doe brol weg.
-Deze aanpak schrijft voor dat het primaire doel moet zijn om zo snel mogelijk een minimale versie van de applicatie op de markt te brengen, om de financi\"ele risico's te verkleinen, en achteraf extra functionaliteit toe te voegen. 
+\noindent Softwareontwikkelaars hebben ondervonden dat de traditionele ontwikkelingsmethoden deze evolutie niet kunnen bijbenen en hebben hun focus verlegd naar andere strategie\"en. In plaats van de volledige applicatie in één keer te implementeren, verkiezen ontwikkelaars vandaag de dag de Agile methoden \cite{beck2001agile}. Bij deze methoden is het hoofddoel om zo snel mogelijk een minimale versie van de applicatie op de markt te brengen, om de financi\"ele risico's te verkleinen. Achteraf kan extra functionaliteit stapsgewijs worden toegevoegd. Een rapport van The Standish Group bevestigt dat de slaagkans aanzienlijk groter is bij het hanteren van een Agile ontwikkelingsmethode \cite{standish2015chaos}.\\
 
-% slaagkans van project is groter
-Een rapport van The Standish Group bevestigt dat de kans op falen aanzienlijk kleiner is bij het hanteren van een Agile ontwikkelingsmethode \cite{standish2015chaos}.\\
-
-\noindent Deze evolutie draagt echter ook negatieve gevolgen met zich mee. Het is één zaak om een project succesvol af te leveren, maar daarmee is de betrouwbaarheid nog niet gegarandeerd. 
-% complexere? -> pas heel deze zin aan. vergroot de vatbaarheid voor fouten.
-Meer complexe software leidt onweerlegbaar tot software die meer vatbaar is voor fouten. De Agile aanpak tracht dit probleem op te lossen door middel van Continue Integratie (CI) \cite{SmartJenkinsDefinitive}. Dit idee vereist dat het volledige testpakket (succesvol) wordt uitgevoerd na elke aanpassing aan de code (\Cref{fig:ext-nl-ci}). 
-
-% versoepelen?
-% een legio misschien veranderen
-Vandaag de dag bestaan een legio aan CI-services die dit process vergemakkelijken door middel van automatisatie. Dit automatisatieproces kan optioneel worden aangevuld met het automatisch uitrollen van nieuwe versies naar de eindgebruikers (Continuous Deployment).
+\noindent Deze evolutie draagt echter ook negatieve gevolgen met zich mee. Het is één zaak om een project succesvol af te leveren, maar daarmee is de betrouwbaarheid nog niet gegarandeerd. Complexere software verhoogt onvermijdelijk de vatbaarheid voor fouten. De Agile aanpak tracht dit probleem op te lossen door middel van Continue Integratie (CI) \cite{SmartJenkinsDefinitive}. Dit idee vereist dat het volledige testpakket (succesvol) wordt uitgevoerd na elke aanpassing aan de code (\Cref{fig:ext-nl-ci}). Vandaag de dag bestaan verschillende CI-services die dit process versoepelen door middel van automatisatie. Dit automatisatieproces kan optioneel worden aangevuld met het automatisch uitrollen van nieuwe versies naar de eindgebruikers (Continuous Deployment).
 
 \begin{figure}[h!]
 	\centering
