--- a/paper/software-engineering/agile-software-development/continuous-integration.tex
+++ b/paper/software-engineering/agile-software-development/continuous-integration.tex
@@ -3,16 +3,14 @@
 \subsection{\CI}
 In traditional software development, the design phase usually leads to a representation of the required functionality in multiple, stand-alone modules. These modules are then implemented separately by the individual developers and are afterwards integrated into one monolithic application. This operation can prove to be very complicated since every developer can make their assumptions at the start of the project. Ultimately, these assumptions may render the components mutually incompatible. Furthermore, since it can take several weeks to months before this integration takes place, the developers often need to rewrite old code. Eventually, this will lead to unanticipated delays and costs \cite{SmartJenkinsDefinitive}.\\
 
-% we require is misschien raar -> must be built ofzo
-\noindent Contrarily, Agile development methodologies advocate the idea of frequent, yet small deliverables. In order to obtain frequent deliverables, we require to build the code often and integrate the modules multiple times, \emph{continuously}, rather than just once at the end. Another advantage of frequent deliverables is the early identification of problems \cite{gitlabci}. We refer to this practice as \acrfull{ci} \cite{SmartJenkinsDefinitive}. Note that this idea has existed before the creation of the Agile manifesto. The first notorious software company that has adopted CI is Microsoft in 1989 \cite{cusumanomicrosoft}. Cusumano reports that Microsoft typically builds the entire application at least once per day and as such requires developers to integrate and test their changes multiple times per day.\\
+\noindent Contrarily, Agile development methodologies advocate the idea of frequent, yet small deliverables. In order to obtain frequent deliverables, the modules must be built and integrated multiple times during the development, on a \emph{continuous} basis, rather than just once at the end. Another advantage of frequent deliverables is the early identification of problems \cite{gitlabci}. We refer to this practice as \acrfull{ci} \cite{SmartJenkinsDefinitive}. Note that this idea has existed before the creation of the Agile manifesto. The first notorious software company that has adopted CI is Microsoft in 1989 \cite{cusumanomicrosoft}. Cusumano reports that Microsoft typically builds the entire application at least once per day and as such requires developers to integrate and test their changes multiple times per day.\\
 
 \noindent The introduction of \CI{} in software development has significant consequences on the life cycle. Where the waterfall model used a cascading life cycle, CI employs a circular, repetitive structure consisting of three phases, as visualised in \Cref{fig:agile-ci-lifecycle}.
 
 \begin{enumerate}
 	\bolditem{Implementation} In the first phase, every developer writes code individually for their assigned module. At a regular interval, the code is committed to the remote repository.
 	
-	% misschien integrate into
-	\bolditem{Integration} When the developer commits their changes, they simultaneously fetch the changes other developers have made to their modules. Afterwards, the developer must integrate these remote changes with their local module to ensure these remain compatible. In case of a conflict, the developer is responsible for resolving this locally \cite{martin2014}.
+	\bolditem{Integration} When the developer commits their changes, they simultaneously fetch the changes other developers have made to their modules. Afterwards, the developer must integrate these remote changes into their local module to ensure these remain compatible. In case of a conflict, the developer is responsible for resolving this locally \cite{martin2014}.
 	
 	\bolditem{Test} After the developer has successfully integrated the remote modules to the locale module, the test suite must be executed to verify that no regressions have been introduced.
 \end{enumerate}
