--- a/paper/summary/dutch.tex
+++ b/paper/summary/dutch.tex
@@ -3,12 +3,10 @@
 \chapter*{Samenvatting}
 In een traditioneel softwareontwikkelingsproces bouwen programmeurs gewoonlijk de volledige applicatie in één keer. Deze applicatie is het eindresultaat van een driedelige procedure die begint met een functionele analyse. Vervolgens wordt de applicatie ge\"implementeerd en ten slotte grondig getest. Elk van deze stappen neemt een aanzienlijke hoeveelheid tijd in beslag, waardoor softwareontwikkeling een zeer dure en langdradige aangelegenheid is. Sinds de wereldwijde economische crisis zijn ontwikkelaars echter genoodzaakt om drastisch te besparen op hun uitgaven. De gemakkelijkste manier om dit te bereiken is zo snel mogelijk een minimale versie van de applicatie uit te brengen met enkel de essenti\"ele functionaliteit en deze vervolgens geleidelijk aan uit te breiden. Dit idee staat bekend als Agile Softwareontwikkeling, waarbij ``agile'' duidt op flexibiliteit.\\
 
-% die zin met "om tests automatisch uit te voeren is fout"
-\noindent Hoewel deze aanpak op korte termijn de financiële risico's vermindert, doet er zich op de langere termijn een ander probleem voor. Om een frequente ontwikkelingscyclus te kunnen hanteren, is er nood aan een mogelijkheid om tests automatisch uit te voeren, zonder menselijke tussenkomst. Dit is mogelijk met behulp van Continue Integratie, maar dit is geen wondermiddel. Om het testproces volledig te kunnen automatiseren, dienen er voldoende en vooral adequate tests aanwezig te zijn.\\
+\noindent Hoewel deze aanpak op korte termijn de financiële risico's vermindert, duikt er op langere termijn een ander probleem op. Om een frequente ontwikkelingscyclus te kunnen hanteren, is er nood aan een manier om tests automatisch uit te voeren. Dit is mogelijk met behulp van Continue Integratie, maar dit is geen wondermiddel. Om het testproces volledig te kunnen automatiseren, dienen er voldoende en vooral adequate tests aanwezig te zijn.\\
 
 \noindent Softwareontwikkeling vandaag de dag gebeurt razendsnel. Het tempo waaraan ontwikkelaars applicaties uitbreiden, laat ook het aantal tests superlineair toenemen. Elke verandering aan de code van de applicatie leidt immers tot de toevoeging van minstens één extra test. Dit heeft een negatief effect op de uitvoeringstijd van de tests, waardoor de voordelen van een korte ontwikkelingscyclus tenietgedaan worden.\\
 
 \noindent Dit probleem van schaalbaarheid kan opgelost worden door gebruik te maken van optimalisatietechnieken. Deze masterproef stelt drie technieken voor: Testpakket Minimalisering, Test-Selectie en Test-Prioritering. De eerste twee technieken proberen te voorspellen welke tests zullen slagen en voeren deze redundante tests bijgevolg niet uit. De derde techniek voert wel elke test uit, maar bepaalt een ideale uitvoeringsvolgorde zodanig dat tests met een hoge kans op falen eerder worden uitgevoerd.\\
 
-% check of deze " klopt!
 \noindent Deze masterproef presenteert een implementatie van deze techniek met drie bestaande en een nieuw prioriteringsalgoritme. Het effect van deze techniek is ge\"evalueerd op twee bestaande applicaties. De resultaten zijn veelbelovend. De eerste falende test wordt gemiddeld dertig keer sneller gedetecteerd dan zonder deze techniek.
