--- a/paper/abstract-en/framework.tex
+++ b/paper/abstract-en/framework.tex
@@ -1,6 +1,5 @@
 \section{Framework}
-% Alpha naam hierbijvermelden.
-\noindent This thesis proposes \velocity{} as a language-agnostic framework that enables Test Case Prioritisation on existing software projects. The architecture consists of three main components, followed by a meta predictor and a novel prioritisation algorithm.
+\noindent This thesis proposes \velocity{} as a language-agnostic framework that enables Test Case Prioritisation on existing software projects. The architecture consists of three main components, followed by a meta predictor and the Alpha algorithm as a novel algorithm for TCP.
 
 \subsection{Agent}
 \noindent The first component is the agent. This component hooks into the testing framework of the application to execute the test cases in the required order. The agent obtains the optimal execution sequence by communicating with the next component, which is the controller.
