--- a/paper/abstract-nl/techniques.tex
+++ b/paper/abstract-nl/techniques.tex
@@ -14,13 +14,12 @@
 \subsection{Testpakket Minimalisering (TSM)}
 \noindent De eerste techniek is Testpakket Minimalisering (TSM) \cite{10.1002/stv.430}. TSM probeert de grootte van het testpakket te verkleinen door redundante tests permanent te verwijderen, volgens volgende definitie:\\
 
-% fix engelse abstract dingen hier ook
-\noindent\fbox{\begin{minipage}{\columnwidth}
+\noindent\fbox{\begin{minipage}{\dimexpr\columnwidth-2\fboxsep-2\fboxrule\relax}
 \textbf{Gegeven:}
-\begin{itemize}
+\begin{itemize}[leftmargin=1em]
 	\item $T = \{t_1, \dots, t_n\}$ een testpakket bestaande uit tests $t_j$.
 	\item $R = \{r_1, \dots, r_m\}$ een verzameling vereisten die voldaan moeten zijn om te stellen dat een applicatie grondig getest is.
-	\item $\{T_1, \dots, T_m\}$ deelverzamelingen van tests uit $T$. Elke deelverzameling $T_i$ wordt geassocieerd met een vereiste $r_i$, zodanig dat eender welke test $t_j \in T_i$ kan worden uitgevoerd om te voldoen aan vereiste $r_i$.
+	\item $\{T_1, \dots, T_m\}$ deelverzamelingen van tests uit $T$. Voor $i \in [1..m]$ wordt elke deelverzameling $T_i$ wordt geassocieerd met een vereiste $r_i$, zodanig dat eender welke test $t_j \in T_i$ kan worden uitgevoerd om te voldoen aan vereiste $r_i$.
 \end{itemize}
 \mbox{}\\
 Het probleem van TSM is vervolgens gedefinieerd als het vinden van een minimale deelverzameling $T'$ van tests $t_j \in T$, zodanig dat aan elke vereiste $r_i \in R$ voldaan is.
@@ -29,11 +28,9 @@ Het probleem van TSM is vervolgens gedefinieerd als het vinden van een minimale 
 \subsection{Test Selectie (TCS)}
 \noindent In plaats van tests permanent te verwijderen, is het ook mogelijk om de veranderingen aan de code te analyseren om zo te bepalen welke tests zeker uitgevoerd moeten worden. Analoog kunnen andere tests mogelijk worden uitgesloten, omdat ze (waarschijnlijk) niet zullen falen \cite{10.1002/stv.430}.\\
 
-
-% fix engelse abstract dingen hier ook
-\noindent\fbox{\begin{minipage}{\columnwidth}
+\noindent\fbox{\begin{minipage}{\dimexpr\columnwidth-2\fboxsep-2\fboxrule\relax}
 \textbf{Gegeven:}
-\begin{itemize}
+\begin{itemize}[leftmargin=1em]
 	\item $T$ het testpakket.
 	\item $P$ de vorige versie van de code.
 	\item $P'$ the huidige (aangepaste) versie van de code.
@@ -45,11 +42,9 @@ TCS vindt een deelverzameling $T' \subseteq T$ die gebruikt kan worden om $P'$ a
 \subsection{Test Prioritering (TCP)}
 \noindent TSM en TCS voeren zo weinig mogelijk tests uit om de omvang van het testpakket te verkleinen. Soms kan het echter gewenst zijn om toch elke test uit te voeren, bijvoorbeeld bij kritische software voor medische doeleinden. In dit geval kan het testpakket nog steeds geoptimaliseerd worden, door de uitvoeringsvolgorde aan te passen. Test Prioritering (TCP) \cite{10.1002/stv.430} rangschikt de tests zodanig dat een vooropgesteld doel zo snel mogelijk bereikt wordt. In deze masterproef zal het doel steeds zijn om zo snel mogelijk een falende test te detecteren.\\
 
-
-% fix engelse abstract dingen hier ook
-\noindent\fbox{\begin{minipage}{\columnwidth}
+\noindent\fbox{\begin{minipage}{\dimexpr\columnwidth-2\fboxsep-2\fboxrule\relax}
 \textbf{Gegeven:}
-\begin{itemize}
+\begin{itemize}[leftmargin=1em]
 	\item $T$ het testpakket.
 	\item $PT$ de verzameling van alle permutaties van $T$.
 	\item $f: PT \mapsto \mathbb{R}$ een functie die gebruikt wordt om permutaties met elkaar te vergelijken.
