--- a/paper/software-engineering/tsa.tex
+++ b/paper/software-engineering/tsa.tex
@@ -26,7 +26,6 @@ int example(int a, int b) {
 	\item $a \neq 0, b \neq 0$
 \end{itemize}
 
-% komma voor ,and ? -> zoek regels op
 \noindent It should be self-evident that achieving and maintaining a coverage percentage of $\SI{100}{\percent}$ at all times is critical. However, this does not necessarily imply that every line of code, every statement or every branch must be explicitly covered \cite{dein_2019}. Some parts of the code might be irrelevant or untestable, such as wrapper or delegation methods that only call a library function. All major programming languages have frameworks and libraries that enable the collection of coverage information during test execution, and each of these frameworks allows the exclusion parts of the code from the final coverage calculation. As of today, the most popular options are JaCoCo\footnote{\url{https://www.jacoco.org/jacoco/}} for Java, coverage.py\footnote{\url{https://github.com/nedbat/coveragepy}} for Python and simplecov\footnote{\url{https://github.com/colszowka/simplecov}} for Ruby. These frameworks report in-depth statistics on the covered code and indicate which parts require more extensive testing, as illustrated in \Cref{fig:coverage-statistics}.
 
 \begin{figure}[!hbp]
@@ -54,14 +53,10 @@ int example(int a, int b) {
 
 \clearpage
 
-% In the previous section. (section zelf heeft niets uitgelegd)
 \subsection{Mutation testing}\label{sssec:mutation-testing}
-The previous section has explained how we can identify which parts of the code require additional test cases. However, we cannot yet measure the quality and resilience of the test suite nor its ability to detect future failures. To accomplish this, we can employ \emph{mutation testing}. This technique creates several \emph{mutants} of the application under test. A mutant is a syntactically different instance of the source code. We can create a mutant by applying one or more \emph{mutation operators} to the original source code. These mutation operators attempt to simulate typical mistakes that developers tend to make, such as the introduction of off-by-one errors, removal of statements and the replacement of logical connectors \cite{Offutt2001}. The \emph{mutation order} refers to the amount of mutation operators that have been applied consecutively to an instance of the code. This order is traditionally rather low, as a result of the \emph{Competent Programmer Hypothesis}, which states that programmers develop programs which are near-correct \cite{5487526}.
+While we can consult the code coverage to identify which parts of the code require additional test cases, we cannot yet measure the quality and resilience of the test suite nor its ability to detect future failures. To accomplish this, we can employ \emph{mutation testing}. This technique creates several \emph{mutants} of the application under test. A mutant is a syntactically different instance of the source code. We can create a mutant by applying one or more \emph{mutation operators} to the original source code. These mutation operators attempt to simulate typical mistakes that developers tend to make, such as the introduction of off-by-one errors, removal of statements and the replacement of logical connectors \cite{Offutt2001}. The \emph{mutation order} refers to the amount of mutation operators that have been applied consecutively to an instance of the code. This order is traditionally rather low, as a result of the \emph{Competent Programmer Hypothesis}, which states that programmers develop programs which are near-correct \cite{5487526}.
 
-\paragraph*{Creating and evaluating} the mutant versions of the code is a computationally expensive process which typically requires human intervention. As a result, very few software developers have managed to employ this technique in practice. \Cref{fig:mutation-testing} illustrates the process of applying mutation testing. The first step is to consider the original program $P$ and a set of test cases $TS$, to which we apply mutation operators to construct a broad set of mutants $P'$. Next, we evaluate every test case $t \in TS$ on the original program $P$ to determine the correct behaviour. Note that this step assumes that if the original source code passes the test cases, it is correct. 
-
-% zoek of je sufficiently thorough of sufficient, thorough
-This assumption will only be valid if the test suite contains sufficient thorough unit tests. If at least one of these test cases fails, we have found a bug which we must first resolve before continuing with the mutation analysis. When $P$ successfully passes every test case, we evaluate every test case for each of the mutants. A mutant $p'$ is said to be ``killed'' if its outcome is different from $P$ for at least one test case. Otherwise, we refer to the mutant as ``surviving''. After we have finished executing the test cases on every mutant, we analyse the set of surviving mutants. Every mutant that managed to survive implies a change in the source code that did not trigger any failure in the test cases. As a result, we need to introduce subsequent test cases until we have killed every mutant. However, it is also possible that the surviving mutants are functionally equivalent to $P$ and are, therefore, correct. Since the detection of program equivalence is an impossible problem, we need to verify this manually \cite{5487526, Offutt2001}. Finally, note that although we can use mutation testing to estimate the adequacy of the test suite, it is not flawless, as several mutation operators can cancel each other out \cite{evaluationoftestsuiteminimization}.
+\paragraph*{Creating and evaluating} the mutant versions of the code is a computationally expensive process which typically requires human intervention. As a result, very few software developers have managed to employ this technique in practice. \Cref{fig:mutation-testing} illustrates the process of applying mutation testing. The first step is to consider the original program $P$ and a set of test cases $TS$, to which we apply mutation operators to construct a broad set of mutants $P'$. Next, we evaluate every test case $t \in TS$ on the original program $P$ to determine the correct behaviour. Note that this step assumes that if the original source code passes the test cases, it is correct. This assumption will only be valid if the test suite contains sufficient and profound unit tests. If at least one of these test cases fails, we have found a bug which we must first resolve before continuing with the mutation analysis. When $P$ successfully passes every test case, we evaluate every test case for each of the mutants. A mutant $p'$ is said to be ``killed'' if its outcome is different from $P$ for at least one test case. Otherwise, we refer to the mutant as ``surviving''. After we have finished executing the test cases on every mutant, we analyse the set of surviving mutants. Every mutant that managed to survive implies a change in the source code that did not trigger any failure in the test cases. As a result, we need to introduce subsequent test cases until we have killed every mutant. However, it is also possible that the surviving mutants are functionally equivalent to $P$ and are, therefore, correct. Since the detection of program equivalence is an impossible problem, we need to verify this manually \cite{5487526, Offutt2001}. Finally, note that although we can use mutation testing to estimate the adequacy of the test suite, it is not flawless, as several mutation operators can cancel each other out \cite{evaluationoftestsuiteminimization}.
 
 \clearpage
 
