--- a/paper/summary/lay.tex
+++ b/paper/summary/lay.tex
@@ -3,7 +3,7 @@
 \chapter*{Lay summary}
 
 \section*{Software}
-Computers, smartphones, cars, or even much simpler devices like alarm clocks and microwaves, every digital device that exists today consists of two distinct parts. The first, physical part is the hardware, which is the combination of mechanical bits and electrical wiring that enable a device to interact with the real world. The type of interaction can range from either very primitive to extremely complex, such as emitting an LED-light, producing a sound, or launching a rocket. The second part is the software, which is installed on the hardware of the device. Software is developed by software engineers using programming languages and instructs the hardware on what to do, and when.
+Every digital device that exists today, from computers, smartphones, cars, to even much simpler devices like alarm clocks and microwaves, consists of two distinct parts. The first, physical part is the hardware, which is the combination of mechanical bits and electrical wiring that enable a device to interact with the real world. The type of interaction can range from either very primitive to extremely complex, such as emitting an LED-light, producing a sound, or launching a rocket. The second part is the software, which is installed on the hardware of the device. Software is developed by software engineers using programming languages and instructs the hardware on what to do, and when.
 
 % entire science on its own is geen ding -> zoek andere uitdrukking
 % before they reach the users
@@ -11,7 +11,7 @@ Computers, smartphones, cars, or even much simpler devices like alarm clocks and
 Deciding on what is the "best" approach towards the development of software is an entire science on its own with two main conceptions. The traditional approach starts with a thinking phase, followed by a programming phase and finalised by a testing phase. In the first phase, the developers create a detailed design document that describes the required functionality of the final application. Next, the developers write computer code that implements the desired functionality. When this process is completed, the quality assurance team thoroughly tests the application. This testing phase exists in hardware as well. Consider, for example, crash tests conducted by car manufacturers. The purpose of these tests is to detect potential issues and anomalies (bugs) in the application before its end-users do. This phase is critical because bugs can result in financial loss or incur other disastrous effects, such as the explosion of two space rockets in the previous decade, mere seconds after ignition.
 
 \section*{Continuous Integration}
-The urge to confine financial losses is even more prominent today, in the wake of the world economic crisis and the more recent COVID-19 induced crisis. While the aforementioned traditional approach works well for small projects, it suffers from severe scalability issues when the size of the application increases at today's pace, since the testing phase consumes valuable time, and time equals money. As a result, software developers have shifted towards an Agile development approach. This approach encourages software developers not to release the entire application at once, but release an initial version with a reduced functionality set as soon as possible and add extra features iteratively. Additionally, the developers must include automated software tests and execute these every time they make a change, to reduce the probability of introducing bugs. Because this is a tedious task, additional software has been created that automatically executes these tests after every change, under the name of Continuous Integration (CI), as illustrated in \Cref{fig:ci}.
+The urge to limit financial losses is even more prominent today, in the wake of the world economic crisis and the more recent COVID-19 induced crisis. While the aforementioned traditional approach works well for small projects, it suffers from severe scalability issues when the size of the application increases at today's pace, since the testing phase consumes valuable time, and time equals money. As a result, software developers have shifted towards an Agile development approach. This approach encourages software developers not to release the entire application at once, but to release an initial version with a reduced functionality set as soon as possible and add extra features iteratively. Additionally, developers must include thorough software tests and execute these every time they make a change, to reduce the probability of introducing bugs. This tedious task can be automated by employing Continuous Integration (CI) software, which automatically executes the test cases after every change to the application code change, as illustrated in \Cref{fig:ci}.
 
 \begin{figure}[h!]
 	\centering
@@ -41,8 +41,8 @@ In order to estimate which test cases might fail, the TCP implementation in this
 	
 	\item \textbf{Historical data:} Next, the predictors can examine whether or not a test case has recently failed. Research has indicated that test cases tend to fail consecutively.
 	
-	\item \textbf{Duration data:} Finally, the predictors can use the average duration of a test case as a tie-breaker. If two test cases are equally likely to fail, the test case with the lowest duration should be preferred to speed up the execution.
+	\item \textbf{Duration data:} Finally, the predictors can use the average duration of a test case as a tie-breaker. If two test cases are equally likely to fail, the test case with the lowest duration should be preferred in order to speed up the execution.
 \end{enumerate}
 
 \section*{Results}
-The benefit of applying TCP on two existing applications has been analysed. The results are promising, the implemented optimisation framework executes, on average, only between $\SIrange{3}{5}{\percent}$ of the test cases. When examining the time it takes to detect a failing test case, the results indicate a reduction of more than $\SIrange{30}{50}{}$ times compared to the original, unprioritised execution.
+The benefits of applying TCP on two existing applications have been analysed. The results are promising: on average, the implemented framework will only execute $\SIrange{3}{5}{\percent}$ of the test cases before a failure is observed. When examining the time it takes to detect a failing test case, the results indicate a reduction of more than $\SIrange{30}{50}{}$ times compared to the original, unprioritised execution.
